<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/btn_kembali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_baseline_arrow_back_24" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/txt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/top"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppins_bold"
        android:text="Sign Up"
        android:textColor="@color/green"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_isi"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins_medium"
        android:text="Isi data register dengan benar agar dapat digunakan untuk mengakses aplikasi."
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/txt_isi">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/l_nama"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="100"
                app:helperTextTextColor="@color/red"
                app:startIconDrawable="@drawable/ic_user">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/e_nama"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/nama_lengkap"
                    android:inputType="textCapSentences"
                    android:maxLength="100" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/l_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:helperTextTextColor="@color/red"
                app:startIconDrawable="@drawable/ic_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/e_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLength="50" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/l_username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:helperTextTextColor="@color/red"
                app:startIconDrawable="@drawable/ic_user">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/e_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:maxLength="50" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/l_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:helperTextTextColor="@color/red"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_gembok">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/e_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="20" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/l_konfir_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:helperTextTextColor="@color/red"
                app:startIconDrawable="@drawable/ic_gembok">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/e_konfir_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_medium"
                    android:hint="@string/konfirmasi_password"
                    android:inputType="textPassword"
                    android:maxLength="20" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_regis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right|end"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_bold"
                android:padding="10dp"
                android:text="@string/registrasi"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/getToken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>