<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_001"
    tools:context=".view.activity.UbahPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="231dp"
        android:background="@color/green" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_kembali"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_kembali_putih" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/poppins_bold"
                android:text="Ubah Password"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top"
        android:layout_margin="16dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins_regular"
                android:text="Ubah password anda dengan password yang mudah anda ketahui. Agar dapat memudahkan anda untuk mengakses aplikasi"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/l_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_gembok">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/e_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="50" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/l_konfir_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:startIconDrawable="@drawable/ic_gembok">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/e_konfir_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/konfirmasi_password"
                    android:inputType="textPassword"
                    android:maxLength="50" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_simpan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_medium"
                android:padding="10dp"
                android:text="@string/simpan"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/id_regis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</RelativeLayout>